WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74869
REGRESSION (
r97533
): Optgroup label is not disabled
https://bugs.webkit.org/show_bug.cgi?id=74869
Summary
REGRESSION (r97533): Optgroup label is not disabled
Joshua Cody
Reported
2011-12-19 09:39:32 PST
The label of an option group within a select is selectable and appears with standard <option> styling. It should match the option disabled styling. See
http://jsfiddle.net/X8Sty/
Attachments
test case
(509 bytes, text/html)
2011-12-20 14:56 PST
,
Alexey Proskuryakov
no flags
Details
Patch
(1.35 KB, patch)
2011-12-22 11:13 PST
,
Darin Adler
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-12-20 14:56:42 PST
Created
attachment 120092
[details]
test case Same test as an attachment.
Alexey Proskuryakov
Comment 2
2011-12-20 15:15:17 PST
Regressed in <
http://trac.webkit.org/changeset/97533
> (Follow up the recent HTMLSelectElement improvements with a little bit more). What I'm seeing is that it's not only drawn incorrectly, but can actually be selected.
Darin Adler
Comment 3
2011-12-21 10:29:16 PST
I’ll look at this as soon as I have a chance.
Darin Adler
Comment 4
2011-12-22 11:13:43 PST
Created
attachment 120345
[details]
Patch
WebKit Review Bot
Comment 5
2011-12-23 02:20:56 PST
Comment on
attachment 120345
[details]
Patch Clearing flags on attachment: 120345 Committed
r103616
: <
http://trac.webkit.org/changeset/103616
>
WebKit Review Bot
Comment 6
2011-12-23 02:21:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug