REGRESSION (r97533): Optgroup label is not disabled https://bugs.webkit.org/show_bug.cgi?id=74869

Reviewed by Alexey Proskuryakov.

* rendering/RenderMenuList.cpp:
(WebCore::RenderMenuList::itemIsEnabled): Added back a line of code that was
accidentally deleted as part of the refactoring in r97533. This line of code
ensures that any items that are not option elements are disabled.


Canonical link: https://commits.webkit.org/91921@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103616 268f45cc-cd09-0410-ab3c-d52691b4dbfc